--- a/PPTT/Pages/PT/Finalizados.cshtml
+++ b/PPTT/Pages/PT/Finalizados.cshtml
@@ -333,4 +333,25 @@
         margin-bottom: 10px;
         font-weight: bold;
     }
+
+    .container {
+        width: auto !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        max-width: none !important;
+    }
+
+    table tr:nth-child(odd) td {
+        background-color: #e0e8f1;
+    }
+
+    table tr:nth-child(even) td {
+        background-color: #eeeeee;
+    }
+
+    .pag {
+        margin: 5px;
+        text-decoration: none;
+        color: midnightblue;
+    }
 </style> 
