--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -11,15 +11,17 @@
 <body>
     <header>
     </header>
-    <div class="container">
+    
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-    </div>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <footer>
+        <p>Dirección de Informática - Departamento de Desarrollo y Mantenimiento de Sistemas</p>
+    </footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
