--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -2,7 +2,7 @@
 @model PPTT.Pages.PT.DetailsPPTT
 
 @{
-
+    ViewData["Title"] = "Detalles Pedido de trabajos";
 }
 
 <h3>Detalle</h3>
@@ -573,6 +573,37 @@ CANCELADOhttps://code.jquery.com/jquery-3.6.0.min.js"></script>
             margin-top: 20px;
             align-items: center;
             justify-content: center;
+        }
+
+        #warningMessagePen {
+            display: block;
+            overflow: auto;
+            word-wrap: break-word;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #dddddd;
+        }
+
+        th {
+            background-color: #f2f2f2;
+            color: #333;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        tr:hover {
+            background-color: #f1f1f1; /* Resalta la fila al pasar el mouse */
         }
     </style>
  
